tests/ui/consts/raw-ptr-const.stderr
error: unsupported untyped pointer in constant
  --> $DIR/raw-ptr-const.rs:5:1
   |
LL | const CONST_RAW: *const Vec<i32> = &Vec::new() as *const _;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: memory only reachable via raw pointers is not supported

error: aborting due to previous error

